# Phosphor

./: CMakeLists.txt  CMakePresets.json  package.json
.config/: dotnet-tools.json
cmake/: download_vcredist.cmake
phosphor/: CMakeLists.txt
phosphor/data/: icon.ps1
phosphor/installer/: bundle.wxs  msi.wxs
phosphor/libs/: config.cmake  pane.cmake
phosphor/src/: config.cxx  config.hxx  console.cxx  main.cpp  main.cxx  phosphor.cpp  phosphor.cxx  phosphor.hpp  phosphor.hxx  win32.cxx
src/: main.cxx  phosphor.cxx  phosphor.hxx  utility.cxx  utility.hxx  window.cxx  window.hxx
tools/PowerShell/: PowerShell.psm1
tools/installer/: msi.wxs
